--- a/public_html/profiles/os2sub/themes/custom/site_fic/src/scss/custom/entities/view/_views.scss
+++ b/public_html/profiles/os2sub/themes/custom/site_fic/src/scss/custom/entities/view/_views.scss
@@ -38,6 +38,13 @@
     }
   }
 }
+.view.view-instagram-billeder.view-id-instagram_billeder.view-display-id-block{
+  .file.file-instagram.file-text-instagram{
+    img{
+      border: 10px solid #fff;
+    }
+  }
+}
 
 // --------------------------------------------------
 // Variants
